--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@
 *.zip
 *.tar.gz
 *.rar
+nbproject/private/private.xml
+nbproject/project.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/build/
