--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.ojdbc6.jar}:\
-    ${file.reference.ojdbc6.jar-1}
+    ${file.reference.ojdbc6.jar-1}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -57,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=futbolistas.Futbolistas
+main.class=View.GUIPrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
