--- a/Cliente/nbproject/project.properties
+++ b/Cliente/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Futbolistas
+application.vendor=Personal
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,20 +25,25 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/CRUDFutbolistas.jar
+dist.jar=${dist.dir}/Futbolistas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.ojdbc6.jar=D:\\ojdbc6.jar
-file.reference.ojdbc6.jar-1=..\\..\\..\\Downloads\\ojdbc6.jar
+file.reference.ojdbc6.jar-1=D:\\Personal2\\Desktop\\ojdbc6.jar
+file.reference.ojdbc6.jar-2=..\\..\\..\\Downloads\\ojdbc6.jar
+file.reference.swingx-all-1.6.4.jar=../../../../../Program Files (x86)/NetBeans 8.2/ide/modules/ext/swingx-all-1.6.4.jar
+file.reference.swingx-all-1.6.4.jar-1=C:\\Program Files\\NetBeans 7.4\\ide\\modules\\ext\\swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc6.jar}:\
     ${file.reference.ojdbc6.jar-1}:\
-    ${libs.beans-binding.classpath}
+    ${file.reference.swingx-all-1.6.4.jar}:\
+    ${file.reference.ojdbc6.jar-2}:\
+    ${file.reference.swingx-all-1.6.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
