--- a/Cliente/nbproject/project.properties
+++ b/Cliente/nbproject/project.properties
@@ -32,8 +32,10 @@ excludes=
 file.reference.ojdbc6.jar=..\\ojdbc6.jar
 file.reference.ojdbc6.jar-1=D:\\Personal2\\Desktop\\ojdbc6.jar
 file.reference.ojdbc6.jar-2=..\\..\\..\\Downloads\\ojdbc6.jar
+file.reference.ojdbc6.jar-3=..\\..\\..\\..\\..\\Downloads\\ojdbc6.jar
 file.reference.swingx-all-1.6.4.jar=../../../../../Program Files (x86)/NetBeans 8.2/ide/modules/ext/swingx-all-1.6.4.jar
 file.reference.swingx-all-1.6.4.jar-1=C:\\Program Files\\NetBeans 7.4\\ide\\modules\\ext\\swingx-all-1.6.4.jar
+file.reference.swingx-all-1.6.4.jar-2=../../../../../../../Program Files (x86)/NetBeans 8.2/ide/modules/ext/swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -41,7 +43,9 @@ javac.classpath=\
     ${file.reference.swingx-all-1.6.4.jar}:\
     ${file.reference.ojdbc6.jar-2}:\
     ${file.reference.swingx-all-1.6.4.jar-1}:\
-    ${file.reference.ojdbc6.jar}
+    ${file.reference.ojdbc6.jar}:\
+    ${file.reference.swingx-all-1.6.4.jar-2}:\
+    ${file.reference.ojdbc6.jar-3}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -66,7 +70,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=View.GUIPrincipal
+main.class=Model.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
