--- a/Servidor/nbproject/private/private.properties
+++ b/Servidor/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\usuario\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
+user.properties.file=C:\\Users\\Juan Pablo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
