--- a/Servidor/nbproject/project.properties
+++ b/Servidor/nbproject/project.properties
@@ -33,13 +33,15 @@ file.reference.ojdbc6.jar-1=D:\\Personal2\\Desktop\\ojdbc6.jar
 file.reference.ojdbc6.jar-2=..\\..\\..\\Downloads\\ojdbc6.jar
 file.reference.swingx-all-1.6.4.jar=../../../../../Program Files (x86)/NetBeans 8.2/ide/modules/ext/swingx-all-1.6.4.jar
 file.reference.swingx-all-1.6.4.jar-1=C:\\Program Files\\NetBeans 7.4\\ide\\modules\\ext\\swingx-all-1.6.4.jar
+file.reference.swingx-all-1.6.4.jar-2=../../../../../../../Program Files (x86)/NetBeans 8.2/ide/modules/ext/swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.ojdbc6.jar-1}:\
     ${file.reference.swingx-all-1.6.4.jar}:\
     ${file.reference.ojdbc6.jar-2}:\
-    ${file.reference.swingx-all-1.6.4.jar-1}
+    ${file.reference.swingx-all-1.6.4.jar-1}:\
+    ${file.reference.swingx-all-1.6.4.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
