--- a/Cliente/nbproject/project.properties
+++ b/Cliente/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=FutbolistasServidor
+application.title=FutbolistasCliente
 application.vendor=Personal
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -25,14 +25,12 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/FutbolistasServidor.jar
+dist.jar=${dist.dir}/FutbolistasCliente.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.ojdbc6.jar=..\\ojdbc6.jar
 file.reference.ojdbc6.jar-1=D:\\Personal2\\Desktop\\ojdbc6.jar
 file.reference.ojdbc6.jar-2=..\\..\\..\\Downloads\\ojdbc6.jar
-file.reference.ojdbc6.jar-3=..\\..\\..\\..\\..\\Downloads\\ojdbc6.jar
 file.reference.swingx-all-1.6.4.jar=../../../../../Program Files (x86)/NetBeans 8.2/ide/modules/ext/swingx-all-1.6.4.jar
 file.reference.swingx-all-1.6.4.jar-1=C:\\Program Files\\NetBeans 7.4\\ide\\modules\\ext\\swingx-all-1.6.4.jar
 file.reference.swingx-all-1.6.4.jar-2=../../../../../../../Program Files (x86)/NetBeans 8.2/ide/modules/ext/swingx-all-1.6.4.jar
@@ -43,9 +41,7 @@ javac.classpath=\
     ${file.reference.swingx-all-1.6.4.jar}:\
     ${file.reference.ojdbc6.jar-2}:\
     ${file.reference.swingx-all-1.6.4.jar-1}:\
-    ${file.reference.ojdbc6.jar}:\
-    ${file.reference.swingx-all-1.6.4.jar-2}:\
-    ${file.reference.ojdbc6.jar-3}
+    ${file.reference.swingx-all-1.6.4.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -70,7 +66,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Model.Main
+main.class=View.GUIPrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
