Fixed notifications at server, now are sysout instead of joptionpane

--- a/Servidor/nbproject/project.properties
+++ b/Servidor/nbproject/project.properties
@@ -33,6 +33,7 @@ file.reference.ojdbc6.jar=..\\ojdbc6.jar
 file.reference.ojdbc6.jar-1=D:\\Personal2\\Desktop\\ojdbc6.jar
 file.reference.ojdbc6.jar-2=..\\..\\..\\Downloads\\ojdbc6.jar
 file.reference.ojdbc6.jar-3=..\\..\\..\\..\\..\\Downloads\\ojdbc6.jar
+file.reference.ojdbc6.jar-4=D:\\ojdbc6.jar
 file.reference.swingx-all-1.6.4.jar=../../../../../Program Files (x86)/NetBeans 8.2/ide/modules/ext/swingx-all-1.6.4.jar
 file.reference.swingx-all-1.6.4.jar-1=C:\\Program Files\\NetBeans 7.4\\ide\\modules\\ext\\swingx-all-1.6.4.jar
 file.reference.swingx-all-1.6.4.jar-2=../../../../../../../Program Files (x86)/NetBeans 8.2/ide/modules/ext/swingx-all-1.6.4.jar
@@ -45,7 +46,8 @@ javac.classpath=\
     ${file.reference.swingx-all-1.6.4.jar-1}:\
     ${file.reference.ojdbc6.jar}:\
     ${file.reference.swingx-all-1.6.4.jar-2}:\
-    ${file.reference.ojdbc6.jar-3}
+    ${file.reference.ojdbc6.jar-3}:\
+    ${file.reference.ojdbc6.jar-4}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
